--- a/AcadosDrone.ipynb
+++ b/AcadosDrone.ipynb
@@ -834,8 +834,6 @@
         "    # Compute body axes\n",
         "    z_b = thrust / np.sqrt(np.sum(thrust ** 2, 1))[:, np.newaxis]\n",
         "\n",
-        "    yawing = np.any(yaw_derivatives[0, :] != 0)\n",
-        "\n",
         "    rate = np.zeros((len_traj, 3))\n",
         "    f_t = np.zeros((len_traj, 1))\n",
         "    for i in range(len_traj):\n",
@@ -859,7 +857,7 @@
         "    rate[:, 1] = w_int[:, 1]\n",
         "    rate[:, 2] = w_int[:, 2]\n",
         "\n",
-        "    go_crazy_about_yaw = True\n",
+        "    go_crazy_about_yaw = False\n",
         "    if go_crazy_about_yaw:\n",
         "        print(\"Maximum yawrate before adaption: %.3f\" % np.max(np.abs(rate[:, 2])))\n",
         "        q_new = q\n",
@@ -890,8 +888,6 @@
         "\n",
         "    tau = rate_dot * np.array([quad.ix, quad.iy, quad.iz])[np.newaxis, :] + rate_x_Jrate\n",
         "    b = np.concatenate((tau, f_t), axis=-1)\n",
-        "    # xf = np.array([quad.length, 0, -quad.length, 0])\n",
-        "    # yf = np.array([0, quad.length, 0, -quad.length])\n",
         "    a_mat = np.concatenate((quad.y_f[np.newaxis, :], -quad.x_f[np.newaxis, :],\n",
         "                            quad.z_l_tau[np.newaxis, :], np.ones_like(quad.z_l_tau)[np.newaxis, :]), 0)\n",
         "\n",
@@ -1260,52 +1256,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 393,
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/reinfris/.local/share/virtualenvs/MPC-XFtFewmw/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:1362: RankWarning: The fit may be poorly conditioned\n",
-            "  return pu._fit(polyvander, x, y, deg, rcond, full, w)\n"
-          ]
+          "data": {
+            "text/plain": [
+              "[array([[ 0.38413086,  1.01616211,  0.45834961, -0.68188477, -0.43237305,\n",
+              "          0.20200195,  0.08989258, -0.0362793 ],\n",
+              "        [-0.47475586, -1.47758789,  0.91977539,  0.63061523, -0.55200195,\n",
+              "         -0.19174805,  0.10698242,  0.0387207 ]]),\n",
+              " array([[ 0.05048828,  2.95517578,  1.83955078, -1.26123047, -1.10400391,\n",
+              "          0.38349609,  0.21396484, -0.07744141],\n",
+              "        [ 1.76826172, -2.03232422,  0.91669922,  1.36376953, -0.86474609,\n",
+              "         -0.40400391,  0.17978516,  0.07255859]])]"
+            ]
+          },
+          "execution_count": 393,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "a = np.array(2 * [0., 1., 2.])\n",
-        "b = np.array([0., 1., 2., 0., 1., 0.])\n",
-        "\n",
-        "poly = np.polynomial.polynomial.polyfit(a, b, 8)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "plt.plot(a, b, '.', xp, np.polynomial.polynomial.polyval(xp, poly), '-', xp, np.polynomial.polynomial.polyval(xp, polyd), '--')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 366,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[0. 0. 0. 0. 0. 0.]\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "m_minus = matrix_generation(-1)\n",
-        "m_one = matrix_generation(1)\n",
-        "\n",
         "def generate_m(n_points, nth_der = 4):\n",
         "    # f_n(t) = c0n + c1n*t + c2n*t^2 + ... = x(n+1) at t = 1 for trajectory n\n",
         "    # f_n+1(t) = d0n + d1n*t + d2n*t^2 + ... = x(n+1) at t = -1 for trajectory n+1 (solve for position state x)\n",
@@ -1378,14 +1350,124 @@
         "    x_der_init = np.array((vel_boundary, acc_boundary, jerk_boundary)).reshape(-1, 1).flatten()\n",
         "\n",
         "    x_intermediate = np.zeros(m_poly.shape[0] - len(x_pos) - len(x_der_init))\n",
-        "    print(x_der_init)\n",
         "    return np.concatenate((x_pos, x_der_init, x_intermediate), axis=None)\n",
         "\n",
-        "m_poly = generate_m(2)\n",
-        "traj = [0.,1.]\n",
-        "y_poly = generate_x(m_poly, traj)\n",
+        "def solve_trajectory(pos_traj, vel_boundaries = None, acc_boundaries = None, jerk_boundaries = None):\n",
+        "    pos_traj = np.asarray(pos_traj)\n",
+        "    if len(pos_traj.shape) == 1:\n",
+        "        pos_traj = pos_traj[np.newaxis]\n",
         "\n",
-        "poly_res = np.linalg.solve(m_poly, y_poly).reshape(-1, 8)\n"
+        "    vel_boundaries = np.asarray(vel_boundaries) if vel_boundaries is not None else np.zeros((pos_traj.shape[0], 2))\n",
+        "    acc_boundaries = np.asarray(acc_boundaries) if acc_boundaries is not None else np.zeros((pos_traj.shape[0], 2))\n",
+        "    jerk_boundaries = np.asarray(jerk_boundaries)if jerk_boundaries is not None else np.zeros((pos_traj.shape[0], 2))\n",
+        "\n",
+        "    poly_bucket = []\n",
+        "    for i, traj in enumerate(pos_traj):\n",
+        "\n",
+        "        n_points = len(traj)\n",
+        "        m_poly = generate_m(n_points)\n",
+        "        y_poly = generate_x(m_poly, traj, )\n",
+        "        poly_res = np.linalg.solve(m_poly, y_poly).reshape(-1, 8)\n",
+        "        poly_bucket.append(poly_res)\n",
+        "\n",
+        "    return poly_bucket\n",
+        "\n",
+        "\n",
+        "def get_refs(poly_coeffs, point_target_time, delta_time):\n",
+        "\n",
+        "    # Adjust target_dt to make it divisible by int_dt\n",
+        "    target_dt = round(target_dt / delta_time) * delta_time\n",
+        "\n",
+        "    # Assign target time for each keypoint using homogeneous spacing\n",
+        "    t_vec = np.arange(0, target_dt * (poly_coeffs.shape[0] + 1) - 1e-5, target_dt)\n",
+        "\n",
+        "    for seg in range(len(t_vec) - 1):\n",
+        "\n",
+        "        # Select time sampling (linear or quadratic) mode\n",
+        "        tau_dt = np.arange(t_vec[seg], t_vec[seg + 1] + 1e-5, delta_time)\n",
+        "\n",
+        "        # Re-normalize time sampling vector between -1 and 1\n",
+        "        t1 = (tau_dt - t_vec[seg]) / (t_vec[seg + 1] - t_vec[seg]) * 2 - 1\n",
+        "\n",
+        "        # Compression ratio\n",
+        "        compress = 2 / np.diff(t_vec)[seg]\n",
+        "\n",
+        "        # Integrate current segment of trajectory\n",
+        "        traj = np.zeros((4, dims, len(t1)))\n",
+        "\n",
+        "        for der_order in range(4):\n",
+        "            for i in range(dims):\n",
+        "                traj[der_order, i, :] = np.polyval(np.polyder(poly_coeffs[seg, :, i], der_order), t1) * (compress ** der_order)\n",
+        "\n",
+        "        if seg < len(t_vec) - 2:\n",
+        "            # Remove last sample (will be the initial point of next segment)\n",
+        "            traj = traj[:, :, :-1]\n",
+        "            t_seg = tau_dt[:-1]\n",
+        "        else:\n",
+        "            t_seg = tau_dt\n",
+        "\n",
+        "        full_traj = np.concatenate((full_traj, traj), axis=-1)\n",
+        "        t_total = np.concatenate((t_total, t_seg))\n",
+        "\n",
+        "    # Separate into p_xyz and yaw trajectories\n",
+        "    yaw_traj = full_traj[:, -1, :]\n",
+        "    full_traj = full_traj[:, :-1, :]\n",
+        "\n",
+        "    return full_traj, yaw_traj, t_total\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "traj = [[0., 1., -1.], [-1,3,1]]\n",
+        "poly_trajectory = solve_trajectory(traj)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 397,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(2, 8)"
+            ]
+          },
+          "execution_count": 397,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "poly_trajectory[0].shape\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 375,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0., 0.],\n",
+              "       [0., 0.],\n",
+              "       [0., 0.]])"
+            ]
+          },
+          "execution_count": 375,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pos_traj = np.asarray(np.array([[1, 2, 3], [0,0,0], [0,0,0]]))\n",
+        "\n",
+        "np.zeros((pos_traj.shape[0], 2))"
       ]
     },
     {
